[package]
name = "saros-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
solana-sdk = { workspace = true }
thiserror = { workspace = true }
arrayref = { workspace = true }
anyhow = { workspace = true }
spl-token-2022 = { workspace = true }
spl-token = { workspace = true }
ruint = { workspace = true }
rewarder-hook = { path = "../rewarder-hook", features = ["no-entrypoint"] }

[dev-dependencies]
proptest = { workspace = true }
